--- a/BackEnd/appsettings.json
+++ b/BackEnd/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "LRSDatabase": "Data Source=KAPETANAKI; Initial Catalog=LRS_DB; Integrated Security=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
