--- a/FrontEnd/.vscode/launch.json
+++ b/FrontEnd/.vscode/launch.json
@@ -9,11 +9,12 @@
       "webRoot": "${workspaceFolder}"
     },
     {
-      "type": "edge",
+      "type": "firefox",
       "request": "launch",
-      "name": "localhost (Edge)",
+      "name": "localhost (Firefox)",
       "url": "https://localhost:4200",
       "webRoot": "${workspaceFolder}"
     }
+
   ]
 }
