--- a/FrontEnd/angular.json
+++ b/FrontEnd/angular.json
@@ -72,7 +72,7 @@
           },
           "defaultConfiguration": "development",
           "options": {
-            "proxyConfig": "src/proxy.conf.js"
+            "proxyConfig": "src/proxy.conf.json"
           }
         },
         "extract-i18n": {
