--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^14.0.0",
     "@arcgis/core": "^4.24.3",
     "jest-editor-support": "*",
+    "ngx-logger": "^5.0.11",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
