Refactoring after review Added TODO comments

--- a/BackEnd/appsettings.json
+++ b/BackEnd/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "LRSDatabase": "Data Source=KAPETANAKI; Initial Catalog=LRS_DB; Integrated Security=true;"
+    "LRSDatabase": "Server=(localdb)\\mssqllocaldb;Database=IntroductoryContext-1;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
